--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             <ul class="nav-list">
                 <li class="nav-item"><a class="link" href="#">Home</a></li>
                 <li class="nav-item"><a class="link" href="#">Shop</a></li>
-                <li class="nav-item"><a class="link" href="#">Cart</a></li>
+                <li class="nav-item"><a class="link" href="./cart/index.html">Cart</a></li>
             </ul>
         </nav>
-    <h1>Flex shop - Main Page</h1>
+    <h1>Flex shop - Shop Page</h1>
     <section class="container">
         <!-- Product 1 -->
         <article class="card">
